# geometer

./: .gitignore  :w  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: build.yml  clippy.yml  run_tests.yml  tests.yml
benches/: convex_hull.rs  extreme_points.rs  interior_points.rs
computational_geometry/: Cargo.toml
computational_geometry/benches/: extreme_points.rs  interior_points.rs
computational_geometry/polygons/custom/: polygon_1.meta.json  polygon_2.meta.json  right_triangle.meta.json  square_4x4.meta.json
computational_geometry/polygons/interesting_polygon_archive/: README.md  eberly_10.meta.json  eberly_14.json  eberly_14.meta.json  elgindy_1.meta.json  gray_embroidery.meta.json  held_1.meta.json  held_12.meta.json  held_3.json  held_3.meta.json  held_7a.meta.json  held_7b.meta.json  held_7c.meta.json  held_7d.meta.json  mapbox_building.meta.json  mapbox_dude.meta.json  matisse_alga.meta.json  matisse_blue.meta.json  matisse_icarus.meta.json  matisse_nuit.meta.json  mei_2.meta.json  mei_3.json  mei_3.meta.json  mei_4.meta.json  mei_5.json  mei_5.meta.json  mei_6.meta.json  meisters_3.meta.json  misc_discobolus.meta.json  misc_fu.json  misc_fu.meta.json  seidel_3.meta.json  skimage_horse.json  skimage_horse.meta.json  toussaint_1a.meta.json
computational_geometry/polygons/interesting_polygon_archive/original/: held_1.json  mapbox_building.json  mapbox_dude.json  matisse_alga.json  matisse_blue.json  matisse_nuit.json
computational_geometry/resources/test/: polygon_1.json  polygon_2.json  right_triangle.json
computational_geometry/resources/test/custom/: polygon_1.meta.json  polygon_2.meta.json  right_triangle.meta.json  square_4x4.meta.json
computational_geometry/resources/test/interesting_polygon_archive/: eberly_10.json  eberly_10.meta.json  eberly_14.json  eberly_14.meta.json  elgindy-1.meta.json  elgindy_1.json  elgindy_1.meta.json  gray_embroidery.json  gray_embroidery.meta.json  held_1.json  held_1.meta.json  held_12.json  held_12.meta.json  held_3.json  held_3.meta.json  held_7a.json  held_7a.meta.json  held_7b.json  held_7b.meta.json  held_7c.json  held_7c.meta.json  held_7d.json  held_7d.meta.json  mapbox_building.json  mapbox_building.meta.json  mapbox_dude.json  mapbox_dude.meta.json  matisse_alga.json  matisse_alga.meta.json  matisse_blue.json  matisse_blue.meta.json  matisse_icarus.json  matisse_icarus.meta.json  matisse_nuit.json  matisse_nuit.meta.json  mei_2.json  mei_2.meta.json  mei_3.json  mei_3.meta.json  mei_4.json  (+17 more)
computational_geometry/resources/test/interesting_polygon_archive/original/: eberly_10.json  held_3.json  held_7b.json  mei_2.json  mei_3.json  mei_6.json  meisters_3.json  misc_discobolus.json  seidel_3.json  skimage_horse.json
computational_geometry/src/: lib.rs  line_segment.rs  point.rs  polygon.rs  trapezoidization.rs  triangle.rs  triangulation.rs  util.rs  vertex.rs  vertex_map.rs
demo/: Cargo.toml
demo/src/: app.rs  main.rs  plot_demo.rs
polygons/custom/: polygon_1.json  polygon_1.meta.json  polygon_2.json  polygon_2.meta.json  right_triangle.json  right_triangle.meta.json  square_4x4.json  square_4x4.meta.json
polygons/interesting_polygon_archive/: README.md  eberly_10.json  eberly_10.meta.json  eberly_14.json  eberly_14.meta.json  elgindy_1.json  elgindy_1.meta.json  gray_embroidery.json  gray_embroidery.meta.json  held_1.json  held_1.meta.json  held_12.json  held_12.meta.json  held_3.json  held_3.meta.json  held_7a.json  held_7a.meta.json  held_7b.json  held_7b.meta.json  held_7c.json  held_7c.meta.json  held_7d.json  held_7d.meta.json  mapbox_building.json  mapbox_building.meta.json  mapbox_dude.json  mapbox_dude.meta.json  matisse_alga.json  matisse_alga.meta.json  matisse_blue.json  matisse_blue.meta.json  matisse_icarus.json  matisse_icarus.meta.json  matisse_nuit.json  matisse_nuit.meta.json  mei_2.json  mei_2.meta.json  mei_3.json  mei_3.meta.json  mei_4.json  (+17 more)
polygons/interesting_polygon_archive/original/: eberly_14.json  held_12.json  held_7d.json  misc_fu.json
polygons/o_rourke/: o_rourke_3_8.json  o_rourke_3_8.meta.json
resources/test/: polygon_1.json  polygon_2.json  right_triangle.json  square_4x4.json
src/: bounding_box.rs  convex_hull.rs  data_structure.rs  error.rs  geometry.rs  lib.rs  line_segment.rs  point.rs  polygon.rs  test_util.rs  triangle.rs  triangulation.rs  util.rs  vector.rs  vertex.rs  vertex_map.rs  vertex_set.rs  visualizer.rs
visualizer/: Cargo.toml  index.html
visualizer/polygons/: elgindy_1.json  gray_embroidery.json  held_1.json  held_12.json  held_7a.json  held_7c.json  matisse_icarus.json  mei_4.json  mei_5.json  square_4x4.json  toussaint_1a.json
visualizer/src/: app.rs  lib.rs  main.rs  plot_demo.rs  polygon_visualizer.rs
