[package]
name="geometer"
edition = "2021"
version = "0.1.0"
rust-version = "1.76"
default-run = "visualizer"

[dependencies]
clap = { version = "4.5.30", features = ["derive"], optional = true }
itertools = "0.14.0"
ordered-float = "5.0.0"
random_color = { version = "1.0.0", optional = true }
rerun = { version = "0.22.0", optional = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.139"
walkdir = "2.5.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
criterion = { version = "0.5", features = ["html_reports"] }
paste = "*"
rstest = "0.24.0"
rstest_reuse = "*"
tempfile = "3.17.1"

[features]
visualizer = ["clap", "random_color", "rerun"]

[[bin]]
name = "generate-rotated-ipa-polygons"
path = "src/bin/generate_rotated_ipa_polygons.rs"

[[bin]]
name = "visualizer"
path = "src/bin/run_visualizer.rs"
required-features = ["visualizer"]

[[bench]]
name = "extreme_points"
harness = false

[[bench]]
name = "interior_points"
harness = false
