[package]
name = "geometer"
edition = "2021"
version = "0.1.0"
rust-version = "1.76"
default-run = "visualizer"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
flexi_logger = { version = "0.31", features = ["kv"] }
itertools = "0.14.0"
log = { version = "0.4", features = ["kv"] }
ordered-float = "5.0.0"
random_color = { version = "1.0.0", optional = true }
regex = "1.11.3"
rerun = { version = "0.24.1", optional = true }
serde = { version = "1.0.218", features = ["derive"] }
serde-hjson = "1.1.0"
serde_json = "1.0.140"
walkdir = "2.5.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = { version = "0.11.8", features = ["kv"] }
paste = "*"
rstest = "0.25.0"
rstest_reuse = "*"
tempfile = "3.18.0"

[features]
visualizer = ["random_color", "rerun"]

[[bin]]
name = "visualizer"
path = "src/bin/run_visualizer.rs"
required-features = ["visualizer"]

[[bin]]
name = "modify-test-case-fields"
path = "src/bin/modify_test_case_fields.rs"

[[bench]]
name = "convex_hull"
harness = false
