[package]
name="computational_geometry"
edition.workspace = true
version.workspace = true

[[bin]]
name = "generate-rotated-ipa-polygons"
path = "src/bin/generate_rotated_ipa_polygons.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_approx_eq = "1.1.0"
itertools = "0.14.0"
paste = "*"
rstest = "0.24.0"
rstest_reuse = "*"
tempfile = "3.14.0"