[package]
edition.workspace = true
include = ["**/*.rs", "Cargo.toml"]
name = "visualizer"
publish = false
rust-version.workspace = true
version.workspace = true
default-run = "visualizer"


[dependencies]
egui = { version = "0.29.0", default-features = false }
egui_plot = { version = "0.29.0", default-features = false, features = ["serde"] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }

eframe = { version="0.29.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.4"
